[package]
name = "akstorytowikiweb"
version = "0.1.0"
authors = ["Enoki <enokiun@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
akstorytowiki = { git = "https://github.com/EnokiUN/akstorytowiki", version = "0.1.0" }
wasm-bindgen = "0.2.84"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
